added ASG for agents

--- a/ec2/master.yaml
+++ b/ec2/master.yaml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >
     This template deploys a CoreOS EC2 instance with the latest official TeamCity server from DockerHub on board.
 
-    Last Modified: 07 Sept 2017
+    Last Modified: 18 Sept 2017
 
 Parameters:
     KeyName:
@@ -18,6 +18,12 @@ Parameters:
         Description: Which instance type should we use for the RDS instance?
         Type: String
         Default: db.t2.small
+
+    AgentsCount:
+        Description: How many ECS hosts do you want to initially deploy?
+        Type: Number
+        Default: 3
+
 
 Mappings:
 
@@ -88,6 +94,40 @@ Resources:
                   - |
                     {"ignition":{"version":"2.0.0","config":{}},"storage":{"files":[{"filesystem":"root","path":"/etc/coreos/update.conf","contents":{"source":"data:,%0AREBOOT_STRATEGY%3D%22off%22","verification":{}},"mode":420,"user":{},"group":{}}]},"systemd":{"units":[{"name":"format-mnt-data.service","enable":true,"contents":"[Unit]\nBefore=teamcity-server.service mnt-data.mount\nConditionPathExists=!/dev/mapper/app-data\n[Service]\nType=oneshot\nExecStart=/bin/bash -c \\\n'/usr/sbin/pvcreate /dev/xvdg \u0026\u0026 \\\n/usr/sbin/vgcreate app /dev/xvdg \u0026\u0026 \\\n/usr/sbin/lvcreate -l 100%FREE -n data app \u0026\u0026 \\\n/usr/sbin/mkfs.ext4 /dev/mapper/app-data'\n[Install]\nWantedBy=multi-user.target\n"},{"name":"mnt-data.mount","enable":true,"contents":"[Unit]\nBefore=teamcity-server.service\nAfter=format-mnt-data.service\nRequires=format-mnt-data.service\nConditionVirtualization=!container\nConflicts=umount.target\n[Mount]\nWhat=/dev/mapper/app-data\nWhere=/mnt/data\nType=ext4\nOptions=\n[Install]\nRequiredBy=teamcity-server.service\n"},{"name":"get-mysql-connector.service","enable":true,"contents":"[Unit]\nBefore=teamcity-server.service\nAfter=mnt-data.mount\nRequires=mnt-data.mount\nConditionPathExists=!/mnt/data/teamcity/lib/jdbc/mysql-connector-java-bin.jar\n[Service]\nType=oneshot\nExecStart=/usr/bin/mkdir -p /mnt/data/teamcity/lib/jdbc\nExecStart=/usr/bin/wget -O /mnt/data/teamcity/lib/jdbc/mysql-connector-java-bin.jar http://central.maven.org/maven2/mysql/mysql-connector-java/5.1.43/mysql-connector-java-5.1.43.jar\n[Install]\nWantedBy=multi-user.target\n"},{"name":"prepare-db-properties.service","enable":true,"contents":"[Unit]\nBefore=teamcity-server.service\nAfter=mnt-data.mount\nRequires=mnt-data.mount\nConditionPathExists=!/mnt/data/teamcity/config/database.properties\n[Service]\nType=oneshot\nExecStart=/usr/bin/mkdir -p /mnt/data/teamcity/config\nExecStart=/bin/bash -c 'echo connectionProperties.user=teamcity \u003e /mnt/data/teamcity/config/database.properties'\nExecStart=/bin/bash -c 'echo connectionProperties.password=t34mc1ty \u003e\u003e /mnt/data/teamcity/config/database.properties'\nExecStart=/bin/bash -c 'echo connectionUrl=jdbc\\:mysql\\://${RDSAddress}/teamcity${AWS::StackName}db \u003e\u003e /mnt/data/teamcity/config/database.properties'\n[Install]\nWantedBy=multi-user.target\n"},{"name":"teamcity-server.service","enable":true,"contents":"[Unit]\nDescription=TeamCity Server\nAfter=docker.service mnt-data.mount get-mysql-connector.service prepare-db-properties.service\nRequires=docker.service mnt-data.mount get-mysql-connector.service prepare-db-properties.service\n[Service]\nTimeoutStartSec=1200s\nExecStart=/usr/bin/docker run \\\n-v /mnt/data/teamcity:/data/teamcity_server/datadir \\\n-v /mnt/data/logs/teamcity:/opt/teamcity/logs \\\n-p 80:8111 \\\n--name teamcity-server \\\njetbrains/teamcity-server:latest\nExecStop=-/usr/bin/docker exec teamcity-server /opt/teamcity/bin/teamcity-server.sh stop 60\nExecStopPost=-/usr/bin/docker stop teamcity-server\nExecStopPost=-/usr/bin/docker rm teamcity-server\nRestart=always\n[Install]\nWantedBy=multi-user.target"}]},"networkd":{},"passwd":{}}
                   - { RDSAddress: !GetAtt [RDSDB, Endpoint.Address] }
+
+
+    EC2AgentsLaunchConfiguration:
+        Type: AWS::AutoScaling::LaunchConfiguration
+        Properties:
+            ImageId:  !FindInMap [AWSRegionToAMI, !Ref "AWS::Region", "AMI"]
+            KeyName: !Ref 'KeyName'
+            InstanceType: !Ref InstanceType
+            SecurityGroups:
+                - !Ref EC2SecurityGroup
+            UserData:
+                Fn::Base64:
+                    !Sub
+                    - |
+                      {"ignition":{"version":"2.0.0","config":{}},"storage":{"files":[{"filesystem":"root","path":"/etc/coreos/update.conf","contents":{"source":"data:,%0AREBOOT_STRATEGY%3D%22off%22","verification":{}},"mode":420,"user":{},"group":{}}]},"systemd":{"units":[{"name":"teamcity-agent.service","enable":true,"contents":"[Unit]\nDescription=TeamCity Agent\nAfter=docker.service\nRequires=docker.service\n[Service]\nTimeoutStartSec=1200s\nExecStart=/usr/bin/docker run \\\n--name teamcity-agent \\\n-e SERVER_URL=${TCServerAddress} \\\njetbrains/teamcity-agent:latest\nExecStop=-/usr/bin/docker stop teamcity-agent\nExecStopPost=-/usr/bin/docker rm teamcity-agent\nRestart=always\n[Install]\nWantedBy=multi-user.target"}]},"networkd":{},"passwd":{}}
+                    - { TCServerAddress: !GetAtt [EC2Instance, PrivateIp] }
+
+    EC2AutoScalingGroup:
+        Type: AWS::AutoScaling::AutoScalingGroup
+        Properties:
+            VPCZoneIdentifier:
+              - !Ref PublicSubnet1
+            LaunchConfigurationName: !Ref EC2AgentsLaunchConfiguration
+            MinSize: !Ref AgentsCount
+            MaxSize: !Ref AgentsCount
+            DesiredCapacity: !Ref AgentsCount
+            Tags:
+                - Key: Name
+                  Value: !Sub TeamCity ${AWS::StackName} Agent
+                  PropagateAtLaunch: true
+        UpdatePolicy:
+            AutoScalingRollingUpdate:
+                MinInstancesInService: 1
+                MaxBatchSize: 1
 
     EC2SecurityGroup:
         Type: AWS::EC2::SecurityGroup
